client/src/css/Homepage.css
body {
    height: 100%;
}

.landing-page {
    display: flex;
    justify-content: space-evenly;
    position: absolute;
    width: 100%;
    height: 100%;
}

.landing-page-flex {
    display: flex;
    justify-content: space-evenly;
}

.landing-page .landing-description {
    margin-top: auto;
    margin-bottom: auto;
    padding-bottom: 2rem;
    width: 100%;
}

.landing-page__header {
    font-size: 3.3rem;
    padding-bottom: 1.5rem;
}

